# cross-chain-transfer-reconciliation-gateway

./: .gitignore  Cargo.toml  README.md
apps/api/: Cargo.toml
apps/api/src/: app_state.rs  error.rs  main.rs
apps/operator/: Cargo.toml
apps/operator/src/: main.rs
apps/reconciler/: Cargo.toml
apps/reconciler/src/: main.rs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
crates/application/: Cargo.toml
crates/application/src/: destination_evidence.rs  error.rs  exceptions.rs  lib.rs  reconciliation.rs  relay_attempts.rs  source_evidence.rs  transfer_intents.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/destination_tracking/: Cargo.toml
crates/destination_tracking/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: destination_evidence.rs  errors.rs  failure.rs  lib.rs  receipt.rs  reconciliation.rs  state.rs  (+5 more)
crates/exceptions/: Cargo.toml
crates/persistence/: Cargo.toml
crates/receipts/: Cargo.toml
crates/reconciliation/: Cargo.toml
crates/relay_tracking/: Cargo.toml
crates/shared/: Cargo.toml
crates/source_tracking/: Cargo.toml
docs/: architecture.md  demo-scenarios.md  exceptions.md  failure-model.md  foundation-spec.md  milestone-1-invariants.md  milestone-2-persistence-readme.md  milestone-3-intent-ingestion-readme.md  milestone-4-source-evidence-readme.md  milestone-5-relay-attempts-readme.md  milestone-6-destination-evidence-readme.md  milestone-7-reconciliation-readme.md  milestone-8-exception-cases-readme.md  reconciliation.md  state-machine.md
migrations/: 0001_init_cross_chain_gateway.sql
(+16 files in other folders)
